tests/ui/feature-gates/feature-gate-const-block-items.stderr
error[E0658]: const block items are experimental
  --> $DIR/feature-gate-const-block-items.rs:3:1
   |
LL | const {
   | ^^^^^
   |
   = note: see issue #149226 <https://github.com/rust-lang/rust/issues/149226> for more information
   = help: add `#![feature(const_block_items)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
