tests/ui/feature-gates/feature-gate-const-block-items.rs
//@ check-fail

const { //~ ERROR: const block items are experimental
    assert!(true)
}

fn main() {}
